--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -8,8 +8,8 @@ description: "Done Projects for <strong>PC, Mobile (Android/iOS), VR/AR. <br/ > 
 current-position-name: "Game Developer"
 current-company-name: "Voodoo.io"
 current-company-website: "https://www.voodoo.io/"
-location: "Manila, Philippines 🇵🇭"
-phone: "+63 915 633 9334"
+location: "Paris, France 🇫🇷"
+phone: "+33 6 33 29 13 89"
 email: "admor.aguilar@gmail.com"
 social: [
   {
