--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -66,7 +66,7 @@ unity_editor_tools: [
 # Experience
 experiences: [
   {
-    title: "Studio Director / Technical Director",
+    title: "Technical Lead / Team Lead",
     company: "All Aboard Learning",
     company_logo: "/images/companies/AllAboardLearning.png",
     company_website: "https://allaboardlearning.com//",
